Work in progress

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rockpaper-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Aditya-Kolla.github.io/rockpapergame",
+  "homepage": "http://Aditya-Kolla.github.io/rockpaper-game",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
